# include-file

./: .cspell.json  .editorconfig  .markdownlint-cli2.yaml  AGENTS.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.github/: copilot-instructions.md
.github/skills/check-spelling/: SKILL.md
.github/skills/lint-markdown/: SKILL.md
.github/workflows/: ci.yml  copilot-agent.yml  copilot-setup-steps.yml  release.yml
.helix/: languages.toml
.zed/: settings.json
src/: asciidoc.rs  code.rs  lib.rs  markdown.rs  org.rs  tests.rs  textile.rs
tests/: README.adoc  README.org  README.textile  markdown.rs  non_member.rs  readme.rs
tests/member/: Cargo.toml  README.md
tests/member/tests/: readme.rs
tests/non-member/: Cargo.toml  README.md
tests/non-member/tests/: readme.rs
