[package]
name = "include-file"
version = "0.5.1"
description = "Include sections of files into Rust source code"
readme = "README.md"
authors = ["Heath Stewart (https://github.com/heaths)"]
keywords = ["include", "macro", "markdown"]
categories = ["development-tools::build-utils", "development-tools::testing"]
edition = "2021"
rust-version = "1.85.0"
repository = "https://github.com/heaths/include-file"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
syn = "2.0.109"

[dev-dependencies]
quote = "1.0.42"

[lints.clippy]
test_attr_in_doctest = "allow"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  "cfg(rust_analyzer)",
  "cfg(span_locations)",
] }
